--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="amain">
         <div class="main">
 
-            <a href="https://bharatbhatt101.github.io/calculator.in/" target="_blank"><img src="pic/icon.jpeg"  alt="Calculator" id="cal"></a>
-            <a href="index.html" target="_blank"><img src="pic/icon1.jpeg" alt="Phone" id="cal"></a>
-            <a href="https://bharatbhatt101.github.io/amazon.in/" target="_blank"><img src="pic/icon2.jpeg" alt="Amazon" id="cal"></a>
+            <a href="https://bharatbhatt101.github.io/calculator.in/" target="_parent"><img src="pic/icon.jpeg"  alt="Calculator" id="cal"></a>
+            <a href="https://bharatbhatt101.github.io/phone.in/" target="_parent"><img src="pic/icon1.jpeg" alt="Phone" id="cal"></a>
+            <a href="https://bharatbhatt101.github.io/amazon.in/" target="_parent"><img src="pic/icon2.jpeg" alt="Amazon" id="cal"></a>
 
 
         </div>
