--- a/index.html
+++ b/index.html
@@ -10,18 +10,221 @@
 <body>
     <div class="amain">
         <div class="main">
+            <div>
 
-            <a href="https://bharatbhatt101.github.io/calculator.in/" target="_parent"><img src="pic/icon.jpeg"  alt="Calculator" id="cal"></a>
-            <a href="https://bharatbhatt101.github.io/phone.in/" target="_parent"><img src="pic/icon1.jpeg" alt="Phone" id="cal"></a>
-            <a href="https://bharatbhatt101.github.io/amazon.in/" target="_parent"><img src="pic/icon2.jpeg" alt="Amazon" id="cal"></a>
+                <a href="https://bharatbhatt101.github.io/calculator.in/" target="_parent"><img src="pic/icon.jpeg"
+                        alt="Calculator" id="cal"></a>
+                <p>Calculator</p>
+            </div>
+            <div>
+                <a href="https://bharatbhatt101.github.io/phone.in/" target="_parent"><img src="pic/icon1.jpeg"
+                        alt="Phone" id="cal"></a>
+                <p>Phone</p>
 
+            </div>
+            <div>
+
+                <a href="https://bharatbhatt101.github.io/amazon.in/" target="_parent"><img src="pic/icon2.jpeg"
+                        alt="Amazon" id="cal"></a>
+                <p>Amazon</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse3.mm.bing.net/th?id=OIP.LZ59iE1pLVyAnWsf28BxZgHaHa&pid=Api&P=0&h=180"
+                        alt="Play Store" id="cal"></a>
+                <p>Play Store</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse2.mm.bing.net/th?id=OIP.kgGUxYNGuKSSRmbrY7xu6AHaHa&pid=Api&P=0&h=180"
+                        alt="Whatsapp" id="cal"></a>
+                <p>Whatsapp</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse4.mm.bing.net/th?id=OIP.mJJRLzaPKt1nfHWV7Yn6VgHaHZ&pid=Api&P=0&h=180"
+                        alt="Clock" id="cal"></a>
+                <p>Clock</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse3.mm.bing.net/th?id=OIP.3yLsbW3kJ5zU9-957TR_mQHaHa&pid=Api&P=0&h=180" alt="YT"
+                        id="cal"></a>
+                <p>YouTube</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse2.mm.bing.net/th?id=OIP.xJetLnew0Q4UOMYHKNF4sQHaHc&pid=Api&P=0&h=180"
+                        alt="Spotify" id="cal"></a>
+                <p>Spotify</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse3.mm.bing.net/th?id=OIP.jDcOO-0LMbGTzFyHBMArdgAAAA&pid=Api&P=0&h=180"
+                        alt="Photos" id="cal"></a>
+                <p>Photos</p>
+            </div>
+            <div>
+
+                <a href="#" target="_parent"><img
+                        src="https://tse2.mm.bing.net/th?id=OIP.9mCmN8XqjvKwAhi6w0ecggHaHZ&pid=Api&P=0&h=180" alt="GPay"
+                        id="cal"></a>
+                <p>GPay</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse3.mm.bing.net/th?id=OIP.eUK_elA5p88-na9hpsromwHaHa&pid=Api&P=0&h=180"
+                        alt="Chrome" id="cal"></a>
+                <p>Chrome</p>
+
+            </div>
+            <div>
+
+                <a href="#" target="_parent"><img
+                        src="https://tse1.mm.bing.net/th?id=OIP.rh-9ZKeTeRAjznl0dQD3CQHaHa&pid=Api&P=0&h=180"
+                        alt="Gmail" id="cal"></a>
+                <p>Gmail</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse1.mm.bing.net/th?id=OIP.OVRVW9ZaxOE3sHmsX7_bMAHaHa&pid=Api&P=0&h=180"
+                        alt="Setting" id="cal"></a>
+                <p>Setting</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse4.mm.bing.net/th?id=OIP.-4f3kyMwYXBcdOH1ovS5ewHaHa&pid=Api&P=0&h=180"
+                        alt="Snapchat" id="cal"></a>
+                <p>Snapchat</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse4.mm.bing.net/th?id=OIP.tiAv_-lsGi0k1Q_7XwyZtQHaHa&pid=Api&P=0&h=180"
+                        alt="Instagram" id="cal"></a>
+                <p>Instagram</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse2.mm.bing.net/th?id=OIP.1mUaiHbi206VwrJUnT9yNgHaHa&pid=Api&P=0&h=180"
+                        alt="Twitter" id="cal"></a>
+                <p>Twitter</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse3.mm.bing.net/th?id=OIP.fepOIk11AVG7xkS4FrbOcQHaHa&pid=Api&P=0&h=180"
+                        alt="Facebook" id="cal"></a>
+                <p>Facebook</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse3.mm.bing.net/th?id=OIP.yL98CHypeT0JQEKEVwf_rAHaHa&pid=Api&P=0&h=180"
+                        alt="Google" id="cal"></a>
+                <p>Google</p>
+            </div>
+            <div>
+
+                <a href="#" target="_parent"><img
+                        src="https://tse2.mm.bing.net/th?id=OIP.8F1GHWl7SzIKwrt-ROzdtgHaHa&pid=Api&P=0&h=180"
+                        alt="Camera" id="cal"></a>
+                <p>Camera</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse2.mm.bing.net/th?id=OIP.idiK1FCQ73EFN2RI7YxpFQHaHa&pid=Api&P=0&h=180"
+                        alt="Message" id="cal"></a>
+                <p>Message</p>
+
+            </div>
+            <div>
+
+                <a href="#" target="_parent"><img
+                        src="https://tse3.mm.bing.net/th?id=OIP.5F69UljXc5LLeM63sxM-6wHaHa&pid=Api&P=0&h=180"
+                        alt="GitHub" id="cal"></a>
+                <p>GitHub</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse2.mm.bing.net/th?id=OIP.2Je_mRByWUDYDT9C0-ooZwHaHa&pid=Api&P=0&h=180" alt="Java"
+                        id="cal"></a>
+                <p>Java</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse3.mm.bing.net/th?id=OIP.CmR_xQULrXJrBNo7Q4EUYgHaHa&pid=Api&P=0&h=180" alt="Php"
+                        id="cal"></a>
+                <p>Php</p>
+            </div>
+            <div>
+                <a href="#" target="_parent"><img
+                        src="https://tse3.mm.bing.net/th?id=OIP.ldO-9eTXSk0ON4DC1vWhYgHaHa&pid=Api&P=0&h=180"
+                        alt="Piano" id="cal"></a>
+                <p>Piano</p>
+            </div>
+
+            <a href="https://bharatbhatt101.github.io/calculator.in/" target="_parent"><img src="pic/icon.jpeg"
+                    alt="Calculator" id="cal"></a>
+            <p>Calculator</p>
+        </div>
+        <div>
+            <a href="https://bharatbhatt101.github.io/phone.in/" target="_parent"><img src="pic/icon1.jpeg" alt="Phone"
+                    id="cal"></a>
+            <p>Phone</p>
+        </div>
+        <div>
+            <a href="https://bharatbhatt101.github.io/amazon.in/" target="_parent"><img src="pic/icon2.jpeg"
+                    alt="Amazon" id="cal"></a>
+            <p>Amazon</p>
+        </div>
+        <div>
+
+            <a href="https://bharatbhatt101.github.io/calculator.in/" target="_parent"><img src="pic/icon.jpeg"
+                    alt="Calculator" id="cal"></a>
+            <p>Calculator</p>
+        </div>
+        <div>
+            <a href="https://bharatbhatt101.github.io/phone.in/" target="_parent"><img src="pic/icon1.jpeg" alt="Phone"
+                    id="cal"></a>
+            <p>Phone</p>
 
         </div>
+        <div>
 
+            <a href="https://bharatbhatt101.github.io/amazon.in/" target="_parent"><img src="pic/icon2.jpeg"
+                    alt="Amazon" id="cal"></a>
+            <p>Amazon</p>
+        </div>
+        <div>
+            <a href="https://bharatbhatt101.github.io/calculator.in/" target="_parent"><img src="pic/icon.jpeg"
+                    alt="Calculator" id="cal"></a>
+            <p>Calculator</p>
+        </div>
+        <div>
+            <a href="https://bharatbhatt101.github.io/phone.in/" target="_parent"><img src="pic/icon1.jpeg" alt="Phone"
+                    id="cal"></a>
+            <p>Phone</p>
+        </div>
+        <div>
+            <a href="https://bharatbhatt101.github.io/amazon.in/" target="_parent"><img src="pic/icon2.jpeg"
+                    alt="Amazon" id="cal"></a>
+            <p>Amazon</p>
+        </div>
+        <div>
+            <a href="https://bharatbhatt101.github.io/calculator.in/" target="_parent"><img src="pic/icon.jpeg"
+                    alt="Calculator" id="cal"></a>
+            <p>Calculator</p>
+        </div>
+        <div>
+            <a href="https://bharatbhatt101.github.io/phone.in/" target="_parent"><img src="pic/icon1.jpeg" alt="Phone"
+                    id="cal"></a>
+            <p>Phone</p>
+        </div>
+        <div>
+            <a href="https://bharatbhatt101.github.io/amazon.in/" target="_parent"><img src="pic/icon2.jpeg"
+                    alt="Amazon" id="cal"></a>
+            <p>Amazon</p>
+        </div> -->
     </div>
-
-
-
+    </div>
 </body>
 
 </html>
