--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p>YouTube</p>
             </div>
             <div>
-                <a href="#" target="_parent"><img
+                <a href="https://bharatbhatt101.github.io/spotify.in/" target="_parent"><img
                         src="https://tse2.mm.bing.net/th?id=OIP.xJetLnew0Q4UOMYHKNF4sQHaHc&pid=Api&P=0&h=180"
                         alt="Spotify" id="cal"></a>
                 <p>Spotify</p>
