--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                 <p>Whatsapp</p>
             </div>
             <div>
-                <a href="#" target="_parent"><img
-                        src="https://tse4.mm.bing.net/th?id=OIP.mJJRLzaPKt1nfHWV7Yn6VgHaHZ&pid=Api&P=0&h=180"
-                        alt="Clock" id="cal"></a>
-                <p>Clock</p>
+                <a href="https://bharatbhatt101.github.io/ffofficial.com/" target="_parent"><img
+                        src="pic/ffm.jpeg"
+                        alt="FFM" id="cal"></a>
+                <p>Free Fire</p>
             </div>
             <div>
                 <a href="https://bharatbhatt101.github.io/youtube.in/" target="_parent"><img
