--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <p>Play Store</p>
             </div>
             <div>
-                <a href="#" target="_parent"><img
+                <a href="https://bharatbhatt101.github.io/whatsapp.in/" target="_parent"><img
                         src="https://tse2.mm.bing.net/th?id=OIP.kgGUxYNGuKSSRmbrY7xu6AHaHa&pid=Api&P=0&h=180"
                         alt="Whatsapp" id="cal"></a>
                 <p>Whatsapp</p>
